--- a/deskover-dashboard-website/src/app/components/home/manage/users/users.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/users/users.component.html
@@ -164,6 +164,14 @@
                 </div>
               </div>
             </div>
+            <div class="col-12 mb-3">
+              <label class="form-label" [for]="'email'">Email</label>
+              <input type="email" class="form-control" id="email" name="email" [(ngModel)]="user.email"
+                     #email="ngModel" required/>
+              <div class="invalid-feedback" *ngIf="email.invalid && (email.dirty || email.touched)">
+                <span *ngIf="email.errors?.['required']">Vui lòng nhập email</span>
+              </div>
+            </div>
             <div class="col-12 mb-3" *ngIf="!user.id">
               <label class="form-label" [for]="'password'">Mật khẩu</label>
               <input type="password" class="form-control" id="password" name="password" [(ngModel)]="user.password"
