--- a/deskover-dashboard-website/src/app/components/home/profile/profile.component.html
+++ b/deskover-dashboard-website/src/app/components/home/profile/profile.component.html
@@ -18,81 +18,42 @@
 <!-- Main content -->
 <section class="content">
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="card card-primary card-outline">
-          <div class="card-body box-profile">
-            <div class="text-center">
-              <img
-                class="profile-user-img img-fluid img-circle mb-3"
-                [src]="getSrc(user.avatar)"
-                alt=" "
-              />
-            </div>
 
-            <h3 class="profile-username text-center">
-              {{user.fullname}}
-            </h3>
-
-            <p class="text-muted text-center">{{user.authority?.role?.name}}</p>
-
-            <!--<ul class="list-group list-group-unbordered mb-3">
-                <li class="list-group-item">
-                    <b>Followers</b>
-                    <a class="float-end">1,322</a>
-                </li>
-                <li class="list-group-item">
-                    <b>Following</b> <a class="float-end">543</a>
-                </li>
-                <li class="list-group-item">
-                    <b>Friends</b> <a class="float-end">13,287</a>
-                </li>
-            </ul>-->
-
-            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(0)">Thông tin cơ bản</button>
-            <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)">Đổi mật khẩu</button>
-          </div>
-        </div>
-
-      </div>
-      <div class="col-md-9">
-        <div class="card">
-          <div class="card-body">
+    <div class="card">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-9">
             <tabset #staticTabs>
-              <tab heading="Thông tin cơ bản" class="mt-3" id="user-profile">
+              <tab heading="Thông tin cơ bản" class="p-3" id="user-profile">
                 <p>
                   <span>Tên đăng nhập:</span>
                   <strong>{{user.username}}</strong>
                 </p>
-                <!--<p>
+                <p>
                   <span>Họ và tên:</span>
                   <strong>{{user.fullname}}</strong>
-                </p>-->
-                <!--<p>
+                </p>
+                <p>
                   <span>Email:</span>
                   <strong>{{user.email}}</strong>
                 </p>
                 <p>
-                  <span>Số điện thoại:</span>
-                  <strong>{{user.phone}}</strong>
-                </p>-->
-                <p>
-                  <span>Ngày tạo:</span>
+                  <span>Ngày đăng ký:</span>
                   <strong>{{user.modifiedAt | date: 'dd/MM/yyyy'}}</strong>
                 </p>
-                <p>
+                <!--<p>
                   <span>Tạo bởi:</span>
                   <strong>{{user.modifiedBy}}</strong>
-                </p>
+                </p>-->
                 <p>
                   <span>Lần đăng nhập cuối:</span>
-                  <strong>{{user.lastLogin | date: 'dd/MM/yyyy HH:mm:ss'}}</strong>
+                  <strong>{{user.lastLogin | date: 'dd/MM/yyyy hh:mm:ss a'}}</strong>
                 </p>
               </tab>
-              <tab heading="Đổi mật khẩu" class="mt-3">
+              <tab heading="Đổi mật khẩu" class="p-3" (selectTab)="resetChangePasswordForm()">
                 <div class="row justify-content-md-center">
-                  <div class="col-12 col-md-6">
-                    <form #changePasswordForm="ngForm">
+                  <div class="col-12 col-md-5">
+                    <form #changePasswordForm="ngForm" class="mt-0 mt-md-4">
                       <div class="mb-3">
                         <label class="form-label" [for]="'currentPassword'">Mật khẩu hiện tại</label>
                         <input type="text" class="form-control" id="currentPassword" name="currentPassword"
@@ -134,8 +95,102 @@
               </tab>
             </tabset>
           </div>
+
+          <div class="col-md-3">
+            <div class="card card-primary card-outline m-0">
+              <div class="card-body box-profile">
+                <div class="ratio ratio-1x1 mb-3">
+                  <img
+                    class="profile-user-img img-fluid img-circle"
+                    [src]="getSrc(user.avatar)"
+                    alt=" "
+                  />
+                </div>
+
+                <h3 class="profile-username text-center">
+                  {{user.fullname}}
+                </h3>
+
+                <p class="text-muted text-center">{{user.authority?.role?.name}}</p>
+
+                <!--<ul class="list-group list-group-unbordered mb-3">
+                    <li class="list-group-item">
+                        <b>Followers</b>
+                        <a class="float-end">1,322</a>
+                    </li>
+                    <li class="list-group-item">
+                        <b>Following</b> <a class="float-end">543</a>
+                    </li>
+                    <li class="list-group-item">
+                        <b>Friends</b> <a class="float-end">13,287</a>
+                    </li>
+                </ul>-->
+
+                <!--<button type="button" class="btn btn-primary btn-block" (click)="selectTab(0)">Thông tin cơ bản</button>
+                <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)">Đổi mật khẩu</button>-->
+
+                <button type="button" class="btn btn-primary btn-block" (click)="editUser()">Cập nhật thông tin</button>
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+<!-- Modal -->
+<div bsModal [config]="{backdrop: 'static'}" #userModal="bs-modal" id="brand-modal" class="modal fade" tabindex="-1"
+     data-bs-focus="false" role="dialog" aria-labelledby="user-dialog">
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="user-dialog" class="modal-title pull-left text-uppercase text-primary fw-bold">
+          Cập nhật thông tin tài khoản
+        </h4>
+        <button type="button" class="btn-close close pull-right" (click)="closeModal()" aria-label="Close">
+          <span aria-hidden="true" class="visually-hidden">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form #userForm="ngForm">
+          <div class="row">
+            <div class="col-12 col-md-5">
+              <div class="ratio ratio-1x1 mb-3 mb-md-0">
+                <div class="file-drop-area img-thumbnail">
+                  <img [src]="avatarPreview" class="img-fluid" alt=" ">
+                  <input type="file" name="file" class="file-drop-input" accept="image/*"
+                         (change)="selectedImageChanged($event)">
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-7">
+              <div class="mb-3">
+                <label class="form-label" [for]="'fullname'">Họ và tên</label>
+                <input type="text" class="form-control" id="fullname" name="fullname" [(ngModel)]="userUpdated.fullname"
+                       #fullname="ngModel" required/>
+                <div class="invalid-feedback" *ngIf="fullname.invalid && (fullname.dirty || fullname.touched)">
+                  <span *ngIf="fullname.errors?.['required']">Vui lòng nhập họ và tên</span>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label class="form-label" [for]="'email'">Email</label>
+                <input type="email" class="form-control" id="email" name="email" [(ngModel)]="userUpdated.email"
+                       #email="ngModel" required/>
+                <div class="invalid-feedback" *ngIf="email.invalid && (email.dirty || email.touched)">
+                  <span *ngIf="email.errors?.['required']">Vui lòng nhập email</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary" [disabled]="userForm.invalid"
+                (click)="saveUser(userUpdated);">Lưu
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal - End -->
